LP-2008-01-04-0: Enhancem.: Initial SMF support
                 Review:    JG

JO-2008-01-04-0: RFE:      dbwriter should write checkpoint to database
                 Bugster:  6644709
                 Issue:    2450
                 Review:   LP

JO-2007-12-21-0: Bugfix:   Correction of previous Cleanup.

JO-2007-12-19-0: RFE:      dbwriter should support schemas for Postgres db installation
                 Bugster:  6643273
                 Issue:    2448
                 Review:   AP
                 Bugfix:   ARCo online help contains invalid, unclear or outdated information
                 Bugster:  6634786
                 Issue:    2434
                 Review:   JG
                 Cleanup:  droped columns j_open, ju_state, changed relevant src and test files
                 Review:   AP

AP-2007-12-18-0: Bugfix:    o Queue Consumables query incorrect in ARCo predefined 
                              queries
                            o adding missing tablespace syntax into postgreSQL 
                              dbdefinition
                 Bugster:   6598176
                 Issue:     2373
                 Review:    JO

PJ-2007-12-07-0: RFE:       ARCo should support multi-clusters
                 Bugfix:    Error.jsp contains unbalanced tagError.jsp
                 Bugfix:    Reporting 'View' dropdown menu and 'Save Result' functionality is confusing  
                 Bugster:   6556389, 6638329
                 Issue:     2245,2439 
                 Changed:   reporting
                 Review:    JO,JG

AP-2007-12-05-0: Bugfix:      arco_read should be able to create synonyms 
                              instead of arco_write
                 Bugster:     6565635
                 Issue:       2282
                 Review:      JO

JO-2007-12-03-0: RFE:         DBW should use batch inserts
                 Bugster:     6566325
                 Issue:       2285