@@ -41,8 +41,8 @@ product.gridengine.name=Sun Grid Engine
 product.copyright.dir=../common
 
 #  build properties for java
-javac.source=1.4
-javac.target=1.4
+javac.source=1.5
+javac.target=1.5
 javac.debug=true
 
 #
