@@ -85,7 +85,7 @@
                 <package-root>target/gensrc</package-root>
                 <package-root>test</package-root>
                 <classpath mode="compile">${jwsdp.home}/jaxb/lib/jaxb-api.jar:${jwsdp.home}/jaxb/lib/jaxb-impl.jar:${jwsdp.home}/jaxb/lib/jaxb-libs.jar:${jwsdp.home}/jaxb/lib/jaxb-xjc.jar:../common/arco_common.jar:${postgres.jdbcdriver}:${junit.jar}</classpath>
-                <source-level>1.4</source-level>
+                <source-level>1.5</source-level>
             </compilation-unit>
         </java-data>
     </configuration>
