@@ -50,22 +50,22 @@
 #
 #  Password of the database user
 #
-DBWRITER_USER_PW='@@DB_USER_PW@@'
+DBWRITER_USER_PW=@@DB_USER_PW@@
 
 #
 #  Name of the database user
 #
-DBWRITER_USER='@@DB_USER@@'
+DBWRITER_USER=@@DB_USER@@
 
 #
 #  JDBC URL to database
 #
-DBWRITER_URL='@@DB_URL@@'
+DBWRITER_URL=@@DB_URL@@
 
 #
 # Name of the database schema for the objects
 #
-DB_SCHEMA='@@DB_SCHEMA@@'
+DB_SCHEMA=@@DB_SCHEMA@@
 
 #
 #  Continous running mode
@@ -82,7 +82,7 @@ DBWRITER_INTERVAL=@@INTERVAL@@
 #
 # JDBC driver name
 #
-DBWRITER_DRIVER='@@DB_DRIVER@@'
+DBWRITER_DRIVER=@@DB_DRIVER@@
 
 #
 # File name of reporting file
@@ -115,4 +115,4 @@ SPOOL_DIR=@@SPOOL_DIR@@
 # Debug level
 # Valid values: WARNING, INFO, CONFIG, FINE, FINER, FINEST, ALL
 #
-DBWRITER_DEBUG='@@DEBUG_LEVEL@@'
+DBWRITER_DEBUG=@@DEBUG_LEVEL@@
