@@ -275,6 +275,8 @@ DetectSMFService()
       if [ $? -ne 0 ]; then
          return
       fi
+   else
+      return
    fi
 
    #Cluster name must be unique
@@ -298,43 +300,24 @@ DetectSMFService()
 #         2  if pidfile does not exist
 # -------------------------------------------------------------------------
 Status() {
-	name=$1
-	pidfile=$2
-	if [ -r $pidfile ]; then
-	  pid=`cat $pidfile`
-	  $UTILBIN_DIR/checkprog $pid $name > /dev/null
-	  if [ "$?" = 0 ]; then
-	    echo "dbwriter is running (pid $pid)"
-       return 0
-     else 
+    name=$1
+    pidfile=$2
+    if [ -r $pidfile ]; then
+       pid=`cat $pidfile`
+       $UTILBIN_DIR/checkprog $pid $name > /dev/null
+       if [ "$?" = 0 ]; then
+          echo "dbwriter is running (pid $pid)"
+          return 0
+       else 
+          echo "dbwriter is not running"
+          return 1
+       fi
+    else 
        echo "dbwriter is not running"
-       return 1
-	  fi
-	else 
-	  echo "dbwriter is not running"
-     return 2
-	fi
+       return 2
+    fi
 }
 
-# --------------------------------------------------------------------------
-#  echo all options for the dbWriter
-# --------------------------------------------------------------------------
-echoOptions()
-{
-    echo "DBWRITER_CONTINOUS=$DBWRITER_CONTINOUS"              
-    echo "DBWRITER_INTERVAL=$DBWRITER_INTERVAL"                
-    echo "DBWRITER_DRIVER=$DBWRITER_DRIVER"                    
-    echo "DBWRITER_URL=$DBWRITER_URL"                          
-    echo "DBWRITER_USER=$DBWRITER_USER"                        
-    echo "DBWRITER_USER_PW=$DBWRITER_USER_PW"                  
-    echo "DBWRITER_REPORTING_FILE=$DBWRITER_REPORTING_FILE"    
-    echo "DBWRITER_SHARE_LOG_FILE=$DBWRITER_SHARE_LOG_FILE"    
-    echo "DBWRITER_STATISTIC_FILE=$DBWRITER_STATISTIC_FILE"    
-    echo "DBWRITER_CALCULATION_FILE=$DBWRITER_CALCULATION_FILE"
-    echo "DBWRITER_DELETION_FILE=$DBWRITER_DELETION_FILE"      
-    echo "DBWRITER_DEBUG=$DBWRITER_DEBUG"
-    echo "DBWRITER_SQL_THRESHOLD=$DBWRITER_SQL_THRESHOLD"
-}
 
 # --------------------------------------------------------------------------
 # Start the dbwriter
@@ -398,10 +381,8 @@ startDBWriter() {
    if [ $USE_DEFAULT_LOG_FILE -eq 1 ]; then
       DBWRITER_OPTIONS="$DBWRITER_OPTIONS -logfile $LOG_FILE"
    fi
-   
-   #echo "DBWRITER_OPTIONS=$DBWRITER_OPTIONS"
-   #TODO LP: Java creates a defunct process. Remove echoOptions and read dbwriter.conf as properties file
-   echoOptions | ExecuteAsAdmin $JAVA $JVMARGS com/sun/grid/reporting/dbwriter/ReportingDBWriter $DBWRITER_OPTIONS &
+   #DEBUG_ARGS="-Xnoagent -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=9000"
+   ExecuteAsAdmin $JAVA $JVMARGS com/sun/grid/reporting/dbwriter/ReportingDBWriter $DBWRITER_OPTIONS &
 }
 
 # --------------------------------------------------------------------------
@@ -471,6 +452,14 @@ if [ "$SGE_CELL" = "" ]; then
    exit 1
 fi
 
+if [ -z "$SGE_CLUSTER_NAME" ]; then
+   SGE_CLUSTER_NAME=`cat $SGE_ROOT/$SGE_CELL/common/cluster_name` 2>/dev/null
+   if [ -z "$SGE_CLUSTER_NAME" ]; then
+      echo "Can not start dbwriter, SGE_CLUSTER_NAME not set"
+      exit 1
+   fi
+fi
+
 DBWRITER_CONF=$SGE_ROOT/$SGE_CELL/common/dbwriter.conf
 
 if [ ! -r $DBWRITER_CONF ]; then
@@ -499,8 +488,7 @@ case $PARAM in
    "start")
       DetectSMFService dbwriter
       if [ -z "$DBWRITER_SMF" -a -n "$service" ]; then
-         #-ts should be safe - already enabled should not change to enabled -t
-         /usr/sbin/svcadm enable -ts $service
+         /usr/sbin/svcadm enable -st $service
          exit $?
       fi
       Status java $PID_FILE > /dev/null 2>&1
